publish: Change sign up link
generated from commit 66b30ac0776db7890d7fde96910d757485ca4f0c

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
           </li>
       </ul>
         <ul class="toc-footer">
-            <li><a href='https://cloud.aha.volenday.com/'>Sign Up for a API Key</a></li>
+            <li><a href='https://cloud.aha.volenday.com/auth/sign-up'>Sign Up for a API Key</a></li>
             <li><a href='https://github.com/slatedocs/slate'>Documentation Powered by Slate</a></li>
         </ul>
     </div>
